--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -49,10 +49,6 @@ bind v paste-buffer
 #interact with vim
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?|fzf)(diff)?$'"
-# bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
-# bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
-# bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
-# bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
 bind -r h if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
 bind -r j if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
 bind -r k if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
@@ -87,19 +83,8 @@ bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 
-# update statusbar if prefix on
-# set -g status-right ' #{?client_prefix,#[reverse]<Prefix>#[noreverse] ,}"#{=21:pane_title}" %H:%M %d-%b-%y'
-
-# forget the find window.  That is for chumps
-# bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
-
-# bind-key -r i run-shell "tmux neww tmux-cht.sh"
-bind-key -r 'C-F' run-shell "tmux neww ~/.local/bin/tmux-sessionizer --nvim"
 bind-key -r D run-shell "~/.local/bin/tmux-sessionizer ~/dotfiles --nvim"
-bind-key -r T run-shell "~/.local/bin/tmux-sessionizer ~/slis/tina --nvim"
-bind-key -r L run-shell "~/.local/bin/tmux-sessionizer ~/slis/lva --nvim"
-bind-key -r O run-shell "~/.local/bin/tmux-sessionizer ~/sym/ovam --nvim"
-bind-key -r N run-shell "~/.local/bin/tmux-sessionizer ~/notes --nvim"
+bind-key -r a run-shell "~/.local/bin/tmux-sessionizer ~/srv --nvim"
 
 set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
 set -g @fzf-url-history-limit '2000'
