update tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -84,7 +84,7 @@ bind '"' split-window -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 
 bind-key -r D run-shell "~/.local/bin/tmux-sessionizer ~/dotfiles --nvim"
-bind-key -r a run-shell "~/.local/bin/tmux-sessionizer ~/srv --nvim"
+bind-key -r A run-shell "~/.local/bin/tmux-sessionizer /srv --nvim"
 
 set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
 set -g @fzf-url-history-limit '2000'
